--- a/home-styles.css
+++ b/home-styles.css
@@ -186,6 +186,110 @@ main{
     }
 }
 
-#card_container :nth-child(2n) .text_container {
+footer{
+    background-color: black ;
+    color: white;
+    height: auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+#list-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#separator{
+    
+    background-color:#f76003;
+    width: 200px;
+    height: 2px;
+}
+
+#copyright{
+
+}
+ul{
+    list-style: none;
+}
+
+#social-list{
+    padding-right: 40px ;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     
 }
+
+.icon-content{
+    position: relative;
+    margin: 0 10px;
+    padding: 0.5rem;
+}
+
+.icon-content a{
+    position: relative;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    border-radius: 50%;
+    color: #4D4D4D;
+    background-color: white;
+    transition: all 0.3s ease-in-out;
+}
+
+.icon-content a:hover{
+    box-shadow: 3px 2px 45px 0px black;
+    color: white;
+}
+
+.icon-content a svg{
+    position: relative;
+    width: 30px;
+    height: 30px;
+    z-index: 1;
+}
+
+.icon-content a .filled{
+    position: absolute;
+    top: auto;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    background-color: black;
+    transition: all 0.3s ease-in-out;
+}
+
+.icon-content a:hover .filled{
+    height: 100%;
+}
+
+.icon-content a[data-social="linkedin"] .filled{
+    background-color: #0274b3;
+}
+
+.icon-content a[data-social="github"] .filled {
+    background-color: #25D366;
+}
+
+.icon-content a[data-social="instagram"] .filled {
+    background: linear-gradient(45deg, #405de6, #5b51db, #b33ab4, #c135b4, #e1306c, #fd1f1f);
+}
+
+.icon-content a[data-social="youtube"] .filled {
+    background-color: #ff0000;
+}
+
+footer img{
+    width: 200px;
+}
+
