--- a/home-styles.css
+++ b/home-styles.css
@@ -27,7 +27,7 @@ header img{
     display: flex;
     gap: 20px;
     position: absolute;
-    left: 50%;
+    left: 30%;
     transform: translateX(-50%);
     top: 10px;
     flex-wrap: wrap;
@@ -42,10 +42,9 @@ header img{
 }
 
 .nav a:hover{
-    color: black;
+    color:#f76003;
     transition-duration: 0.4s;
-    background-color: #c64c00;
-    border-radius: 20px;
+    
 }
 
 #hname{
@@ -71,7 +70,7 @@ main{
 #banner{
     overflow: hidden;
     width: 100%;
-    background-color: #f76003;
+    background-color: #ff873d;
 }
 
 #scrollingText{
@@ -91,13 +90,18 @@ main{
     0% { transform: translateX(100%); }
     100% { transform: translateX(-100%); }
 }
+
+#services{
+    text-align: center;
+    margin-top: 40px;
+}
 #card_container{
     display: flex;
     flex-direction: column;
     justify-content: center;
     flex-wrap: wrap;
     gap: 60px;
-    margin: 150px;
+    margin: 50px 150px 150px 150px
 }
 
 .card img{
@@ -135,7 +139,7 @@ main{
 }
 
 .text_container p{
-    width: 50%;
+    width: 80%;
    
 }
 
