--- a/bmi.css
+++ b/bmi.css
@@ -11,7 +11,7 @@
 }
 
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #fff;
     display: flex;
     flex-direction: column;
@@ -299,7 +299,7 @@ header img{
     display: flex;
     gap: 20px;
     position: absolute;
-    left: 30%;
+    left: 50%;
     transform: translateX(-50%);
     top: 10px;
     flex-wrap: wrap;
@@ -314,8 +314,8 @@ header img{
 
 .nav a:hover{
     color:#f76003;
-    transition-duration: 0.1s;
-    font-weight: bolder;
+    transition-duration: 0.3s;
+   
 }
 
 
@@ -350,6 +350,7 @@ footer {
 #list-container {
     display: flex;
     flex-direction: column;
+    gap: 20px;
     justify-content: center;
     align-items: center;
 }
@@ -365,7 +366,7 @@ ul {
 }
 
 #social-list {
-    padding-right: 40px;
+    
     display: flex;
     flex-direction: row;
     justify-content: center;
