--- a/contact-us.css
+++ b/contact-us.css
@@ -140,7 +140,9 @@ tr td{
 }
 
 #list-container{
+    margin-top: 20px;
     display: flex;
+    gap:20px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -161,7 +163,7 @@ ul{
 }
 
 #social-list{
-    padding-right: 40px ;
+    
     display: flex;
     flex-direction: row;
     justify-content: center;
