--- a/home-styles.css
+++ b/home-styles.css
@@ -25,7 +25,7 @@ header img{
 
 .nav{
     display: flex;
-    gap: 20px;
+    gap: 10px;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
@@ -84,7 +84,7 @@ main{
     font-weight: bold;
     padding: 20px;
     text-align: center;
-    animation: scroll 10s linear infinite;
+    animation: scroll 20s linear infinite;
 }
 
 @keyframes scroll {
@@ -150,7 +150,8 @@ main{
     border-radius: 20px;
     background-color: #f76003;
     border: none;
-
+    font-weight: bolder;
+    font-size: large;
 }
 
 .text_container a button:hover{
@@ -159,7 +160,7 @@ main{
     color: #f76003;
     transition-duration: 0.4s;
     font-weight: bolder;
-    font-size: larger;
+    font-size: 25px;
 }
 
 @media (max-width: 768px) {
